--- a/website/index.html
+++ b/website/index.html
@@ -2,75 +2,43 @@
 {% block title %}Main page
 {% endblock %}
 {% block body %}
-<h1>Welocme to TFTL!</h1>
-<li>Lorem ipsum dolor sit amet.</li>
-<li>Dolores expedita fuga non perferendis.</li>
-<li>Accusantium deserunt illum perspiciatis reiciendis!</li>
-<li>Consequatur cumque fuga possimus quo.</li>
-<li>Corporis molestiae nostrum vel. Quos.</li>
-<li>Aliquid earum magnam repellat. Perferendis?</li>
-<li>Asperiores consectetur eius itaque sint?</li>
-<li>Illo nam necessitatibus nemo perspiciatis!</li>
-<li>Earum excepturi officia ratione sed.</li>
-<li>Commodi nihil pariatur quia ratione?</li>
-<li>Consequatur eos fuga harum vero.</li>
-<li>Aspernatur, iusto neque! Laborum, placeat!</li>
-<li>Blanditiis debitis fuga quo reprehenderit.</li>
-<li>Dolor iure magni voluptates voluptatum.</li>
-<li>Aspernatur commodi enim ipsa tempore.</li>
-<li>Natus officia perspiciatis vero voluptas?</li>
-<li>Aperiam dolor nulla quod similique.</li>
-<li>Consectetur iure quaerat reprehenderit sunt!</li>
-<li>Consectetur cupiditate eos explicabo magnam?</li>
-<li>Cum, explicabo, id? Ipsum, placeat!</li>
-<li>Accusamus ad laudantium officiis omnis.</li>
-<li>Eius expedita molestiae quidem quis?</li>
-<li>Aliquid nemo nobis porro vel.</li>
-<li>At excepturi modi officiis ut.</li>
-<li>Alias consectetur dolorem ea veritatis!</li>
-<li>Delectus expedita quis tempore veritatis!</li>
-<li>Accusamus accusantium deserunt facilis nihil?</li>
-<li>Eaque incidunt labore quo veniam.</li>
-<li>Explicabo id ipsam nihil repellat.</li>
-<li>Accusantium esse iste neque perferendis!</li>
-<li>Culpa distinctio enim obcaecati voluptatibus.</li>
-<li>Asperiores eos esse repellendus veniam?</li>
-<li>Aperiam fugiat itaque repudiandae totam!</li>
-<li>Beatae esse molestias non rem.</li>
-<li>Asperiores quae quod tempore voluptatem.</li>
-<li>Corporis doloribus ipsam obcaecati temporibus.</li>
-<li>Ducimus harum ipsa obcaecati sunt.</li>
-<li>Ab distinctio magnam nesciunt repellendus?</li>
-<li>Ducimus magni provident ullam velit.</li>
-<li>Iste labore officiis quidem repellendus?</li>
-<li>Commodi harum maiores odio ratione!</li>
-<li>Laboriosam repellendus sunt vel vero.</li>
-<li>Debitis et explicabo placeat repudiandae.</li>
-<li>Et hic inventore quibusdam repudiandae.</li>
-<li>Dolore facilis quod unde voluptatibus?</li>
-<li>Ab aliquam id neque repellendus!</li>
-<li>Eveniet, exercitationem, repudiandae! Nihil, officiis!</li>
-<li>Ab accusamus maxime necessitatibus porro?</li>
-<li>Debitis earum eligendi quas rerum?</li>
-<li>Ad exercitationem minima velit vero!</li>
-<li>A consectetur molestiae velit vero!</li>
-<li>Aliquid culpa deserunt eum omnis!</li>
-<li>Architecto blanditiis magnam perspiciatis quasi.</li>
-<li>Assumenda deleniti itaque quod tempora!</li>
-<li>A iste numquam voluptatibus! Aliquam.</li>
-<li>Deserunt ducimus nemo quae ratione.</li>
-<li>Accusamus quaerat quod suscipit voluptatem.</li>
-<li>Aspernatur incidunt minima nulla quaerat.</li>
-<li>A fugit odit perspiciatis saepe.</li>
-<li>Debitis ipsum nesciunt nostrum odit.</li>
-<li>A dolore doloribus possimus qui!</li>
-<li>Ea hic iste natus pariatur?</li>
-<li>Dignissimos excepturi fugiat itaque voluptatem.</li>
-<li>Distinctio ducimus error laudantium minima?</li>
-<li>Excepturi explicabo obcaecati possimus praesentium.</li>
-<li>Ad deleniti natus porro voluptatum.</li>
-<li>Aperiam impedit incidunt reprehenderit sapiente!</li>
-<li>Aspernatur dignissimos dolores necessitatibus praesentium!</li>
-<li>Expedita ipsum non repudiandae sint.</li>
-<li>Animi assumenda mollitia nulla ullam?</li>
+<h1>Каталог услуг</h1>
+<div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
+    <div class="col">
+        <div class="card">
+            <img src="{{url_for('static', filename='img/Kazakhstan.svg.png')}}">
+            <div class="card-body">
+                <h5 class="card-title">Получение гражданства Казахстана</h5>
+                <p class="card-text">Цена: 3'000$</p>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <img src="{{url_for('static', filename='img/Kyrgyzstan.svg.png')}}">
+            <div class="card-body">
+                <h5 class="card-title">Получение гражданства Кыргызстана</h5>
+                <p class="card-text">Цена: 6'000$</p>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <img src="{{url_for('static', filename='img/Tajikistan.svg.png')}}">
+            <div class="card-body">
+                <h5 class="card-title">Получение гражданства Таджикистана</h5>
+                <p class="card-text">Цена: 2'500$</p>
+            </div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <img src="{{url_for('static', filename='img/Georgia.svg.webp')}}">
+            <div class="card-body">
+                <h5 class="card-title">Получение гражданства Грузии</h5>
+                <p class="card-text">Цена: 7'000$</p>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
